# shotpipe

./: .gitignore  README.md  flake.nix  package.json  pnpm-lock.yaml
.claude/agents/: tauri-react-frontend.md  tauri-rust-architect.md
docs/architecture/: tech-stack.md
docs/guides/: development.md
docs/implementation/: implementation-plan.md
docs/specification/: mvp-spec.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/monitor/: mod.rs
src-tauri/src/tray/: mod.rs
